--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@ button {
 const SAMPLE_CONFIG = {
   36: {
     name: "Timpani",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/13%20%20%E7%99%BD%E8%99%8E%E9%87%8E%E3%81%AE%E5%A8%98%20%E3%83%8F%E3%82%9A%E3%83%95%E3%82%9A%E3%83%AA%E3%82%AB%E3%83%BB%E3%82%A8%E3%83%B3%E3%83%86%E3%82%99%E3%82%A3%E3%83%B3%E3%82%AF%E3%82%99%E3%83%86%E3%83%BC%E3%83%9E%20-%20from%20YouTube%20%5Bvocals%5D.5.aif",
+    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
     mode: "oneshot"
   },
   38: {
     name: "Low Strings",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/13%20%20%E7%99%BD%E8%99%8E%E9%87%8E%E3%81%AE%E5%A8%98%20%E3%83%8F%E3%82%9A%E3%83%95%E3%82%9A%E3%83%AA%E3%82%AB%E3%83%BB%E3%82%A8%E3%83%B3%E3%83%86%E3%82%99%E3%82%A3%E3%83%B3%E3%82%AF%E3%82%99%E3%83%86%E3%83%BC%E3%83%9E%20-%20from%20YouTube%20%5Bvocals%5D.7.aif",
+    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
     mode: "gate"
   },
   40: {
     name: "Brass Hit",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/13%20%20%E7%99%BD%E8%99%8E%E9%87%8E%E3%81%AE%E5%A8%98%20%E3%83%8F%E3%82%9A%E3%83%95%E3%82%9A%E3%83%AA%E3%82%AB%E3%83%BB%E3%82%A8%E3%83%B3%E3%83%86%E3%82%99%E3%82%A3%E3%83%B3%E3%82%AF%E3%82%99%E3%83%86%E3%83%BC%E3%83%9E%20-%20from%20YouTube%20%5Bvocals%5D.9.aif",
+    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
     mode: "oneshot"
   },
   41: {
     name: "String Pad",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/13%20%20%E7%99%BD%E8%99%8E%E9%87%8E%E3%81%AE%E5%A8%98%20%E3%83%8F%E3%82%9A%E3%83%95%E3%82%9A%E3%83%AA%E3%82%AB%E3%83%BB%E3%82%A8%E3%83%B3%E3%83%86%E3%82%99%E3%82%A3%E3%83%B3%E3%82%AF%E3%82%99%E3%83%86%E3%83%BC%E3%83%9E%20-%20from%20YouTube%20%5Bvocals%5D.11.aif",
+    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
     mode: "gate"
   },
   43: {
     name: "FX Perc",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/13%20%20%E7%99%BD%E8%99%8E%E9%87%8E%E3%81%AE%E5%A8%98%20%E3%83%8F%E3%82%9A%E3%83%95%E3%82%9A%E3%83%AA%E3%82%AB%E3%83%BB%E3%82%A8%E3%83%B3%E3%83%86%E3%82%99%E3%82%A3%E3%83%B3%E3%82%AF%E3%82%99%E3%83%86%E3%83%BC%E3%83%9E%20-%20from%20YouTube%20%5Bvocals%5D.13.aif",
+    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
     mode: "oneshot"
   },
   45: {
