--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ console.log(note, res.status, res.headers.get("content-type"));
   },
   45: {
     name: "Noise Bed",
-    url: "https://cdn.jsdelivr.net/gh/mdn/webaudio-examples/audio-basics/techno.wav",
+    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
     mode: "gate"
   }
 };
