--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@ button {
 const SAMPLE_CONFIG = {
   36: {
     name: "Timpani",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
+    url: "https://cdn.jsdelivr.net/gh/mdn/webaudio-examples/audio-basics/techno.wav",
     mode: "oneshot"
   },
   38: {
     name: "Low Strings",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
+    url: "https://cdn.jsdelivr.net/gh/mdn/webaudio-examples/audio-basics/techno.wav",
     mode: "gate"
   },
   40: {
     name: "Brass Hit",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
+    url: "https://cdn.jsdelivr.net/gh/mdn/webaudio-examples/audio-basics/techno.wav",
     mode: "oneshot"
   },
   41: {
     name: "String Pad",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
+    url: "https://cdn.jsdelivr.net/gh/mdn/webaudio-examples/audio-basics/techno.wav",
     mode: "gate"
   },
   43: {
     name: "FX Perc",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
+    url: "https://cdn.jsdelivr.net/gh/mdn/webaudio-examples/audio-basics/techno.wav",
     mode: "oneshot"
   },
   45: {
