--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ const SAMPLE_CONFIG = {
   },
   45: {
     name: "Noise Bed",
-    url: "https://pub-05a066d1e7ac452fa9f7a1247862675b.r2.dev/lineapp_end_16k.wav",
+    url: "https://cdn.jsdelivr.net/gh/mdn/webaudio-examples/audio-basics/techno.wav",
     mode: "gate"
   }
 };
