--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 
         // サンプルの設定
         const SAMPLE_CONFIG = {
-            36: { name: "C1 (Timpani)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/le1.wav", mode: "oneshot" },
-            38: { name: "D1 (Strings)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/le1.wav", mode: "gate" },
-            40: { name: "E1 (Brass)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/le2.wav", mode: "oneshot" },
-            41: { name: "F1 (Pad)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/le2.wav", mode: "gate" },
-            43: { name: "G1 (FX)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/le2.wav", mode: "oneshot" },
-            45: { name: "A1 (Noise)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/le2.wav", mode: "gate" }
+            36: { name: "C1 (Timpani)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/byakkoya01.wav", mode: "oneshot" },
+            38: { name: "D1 (Strings)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/byakkoya02.wav", mode: "oneshot" },
+            40: { name: "E1 (Brass)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/byakkoya03.wav", mode: "oneshot" },
+            41: { name: "F1 (Pad)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/byakkoya04.wav", mode: "oneshot" },
+            43: { name: "G1 (FX)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/byakkoya05.wav", mode: "oneshot" },
+            45: { name: "A1 (Noise)", url: "https://raw.githubusercontent.com/zaq-type/yh.github.io/main/byakkoya06.wav", mode: "oneshot" }
         };
 
         // UIの生成
